--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,9 +1,17 @@
 # We have a conf and classes directory, add to BBPATH
-BBPATH .= ":${LAYERDIR}"
+
+# Note how we PREpend BBPATH. This is due to the fact that
+# bitbake does not override classes per layer as it does
+# recipes. Classes are processed strictly in BBPATH order.
+# As we override classes from meta-nxp-desktop, for custom
+# work, we prepend instead of append our path.
+BBPATH =. "${LAYERDIR}:"
 
 # We have a packages directory, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-            ${LAYERDIR}/recipes-*/*/*.bbappend"
+            ${LAYERDIR}/recipes-*/*/*.bbappend \
+            ${LAYERDIR}/classes/*.bb* \
+"
 
 BBFILE_COLLECTIONS += "var-debian-layer"
 BBFILE_PATTERN_var-debian-layer:= "^${LAYERDIR}/"
